# modernscratch

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.txt  RxCpp.vcxproj  c.cmd  cm.cmd  debug.modernscratch.exe.sln  libraries.vcxproj  libraries.vcxproj.filters  modernscratch.cpp  modernscratch.sln  modernscratch.vcxproj  modernscratch.vcxproj.filters
ext/: CMakeLists.txt
rxanimate/: rxanimate.hpp
rxwin32/: rxwin32-measurement.hpp  rxwin32-message.hpp  rxwin32-theme.hpp  rxwin32-util.hpp  rxwin32-wm.hpp  rxwin32.hpp
